--- a/src/style/libraryCourse.scss
+++ b/src/style/libraryCourse.scss
@@ -1,13 +1,22 @@
 .library-course {
     display: grid;
     grid-template-columns: repeat(auto-fit, 1fr);
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 50px 1fr;
 
-    &__title {
+    &__title-check {
+        grid-row: 1/2;
+        display: flex;
+    }
+
+    &__action {
         grid-row: 1/2;
     }
 
     &__description {
         grid-row: 2/3;
+    }
+
+    &__arrow {
+        grid-row: 1/2;
     }
 }
